name:                BliCCG
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Nathan Bedell
maintainer:          nbedell@tulane.edu
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Lex, Parser, Rules, TH
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , containers >=0.5 && <0.6
                     , parsec
                     , template-haskell
  -- hs-source-dirs:
  default-language:    Haskell2010
